--- a/Maze/Maze.cbp
+++ b/Maze/Maze.cbp
@@ -24,16 +24,20 @@
 			<Add option="-Wall" />
 		</Compiler>
 		<Unit filename="include/Element.h" />
+		<Unit filename="include/Graph.h" />
 		<Unit filename="include/LinkList.h" />
 		<Unit filename="include/Maze.h" />
 		<Unit filename="include/MazeSolver.h" />
+		<Unit filename="include/Node.h" />
 		<Unit filename="include/Species.h" />
 		<Unit filename="include/Stack.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Element.cpp" />
+		<Unit filename="src/Graph.cpp" />
 		<Unit filename="src/LinkList.cpp" />
 		<Unit filename="src/Maze.cpp" />
 		<Unit filename="src/MazeSolver.cpp" />
+		<Unit filename="src/Node.cpp" />
 		<Unit filename="src/Species.cpp" />
 		<Unit filename="src/Stack.cpp" />
 		<Extensions>
